monetdb5/mal/Tests/tst191.stable.err
stderr of test 'tst191` in directory 'monetdb5/mal` itself:


# 13:41:49 >  
# 13:41:49 >  "mserver5" "--debug=10" "--set" "gdk_nr_threads=0" "--set" "mapi_open=true" "--set" "mapi_port=33650" "--set" "mapi_usock=/var/tmp/mtest-26223/.s.monetdb.33650" "--forcemito" "--dbpath=/export/scratch1/mk/branches/default//Linux/var/MonetDB/mTests_monetdb5_mal" "--set" "embedded_c=true"
# 13:41:49 >  

# builtin opt 	gdk_dbpath = /export/scratch1/mk/branches/default//Linux/var/monetdb5/dbfarm/demo
# builtin opt 	mapi_port = 50000
# builtin opt 	mapi_open = false
# builtin opt 	mapi_ipv6 = false
# builtin opt 	mapi_autosense = false
# builtin opt 	sql_optimizer = default_pipe
# builtin opt 	sql_debug = 0
# builtin opt 	raw_strings = false
# cmdline opt 	gdk_nr_threads = 0
# cmdline opt 	mapi_open = true
# cmdline opt 	mapi_port = 33650
# cmdline opt 	mapi_usock = /var/tmp/mtest-26223/.s.monetdb.33650
# cmdline opt 	gdk_dbpath = /export/scratch1/mk/branches/default//Linux/var/MonetDB/mTests_monetdb5_mal
# cmdline opt 	embedded_c = true

# 13:41:49 >  
# 13:41:49 >  "mclient" "-lmal" "-ftest" "-tnone" "-Eutf-8" "--host=/var/tmp/mtest-26223" "--port=33650"
# 13:41:49 >  

MAPI  = (monetdb) /var/tmp/mtest-26223/.s.monetdb.33650
QUERY = function welcome0(lim:int):str;
            i:= 2;
            w:="hello";
            return (w,i);   # should produce a type error
        end welcome0;
        
        y:= user.welcome0(1);
        io.print(y);
ERROR = !TypeException:user.welcome0[3]:Multiple assignment mismatch

# 13:41:49 >  
# 13:41:49 >  "Done."
# 13:41:49 >  

